Contract Configurator 1.23.1
- Fixed issue with FacilityRequirement in tracking station (thanks JPLRepo).

Contract Configurator 1.23.0
- Support for KSP 1.3.0
- Fix issue with contract item sizes not always being set correctly in mission control when switching tabs.
- Fixed "input is null" error in Docking parameter (thanks linuxgurugamer).
- Fixed to not generate contracts without parameters (thanks severedsolo).
- Fixed Sigma Dimensions compatibility issue with atmosphere height (thanks pap1723 and Sigma88).

Contract Configurator 1.22.3
- Fixed reversed base open/closed requirement text (thanks Keniamin).
- Add logic to add waypoint icons into Waypoint Manager (happened automatically before KSP 1.2).
- Don't allow astronaut complex biome to be used before it's at level 2 (thanks doktorstick).
- Fixed validation issues with Rendezvous parameter (thanks doktorstick).

Contract Configurator 1.22.2
- Fix possible argumentOfPeriapsis issue (thanks Intrepidrd).

Contract Configurator 1.22.1
- Fixed issue with vessel identifier parsing introduced in 1.22.0.

Contract Configurator 1.22.0
- Added HasAntenna parameter (thanks Kerbas-ad-astra).
- Added Vessel.AntennaTransmitPower() and Vesse.AntennaRelayPower() (thanks Kerbas-ad-astra).
- Contract weights for celestial bodies are now set by Contract Configurator (affecting the likelihood of stock contracts generating for the given body).
- Added minArgumentOfPeriapsis and maxArgumentOfPeriapsis to Orbit parameter.
- Added horizontalDistance to VisitWaypoint.
- Make references to 'Sun' generic in SolarScience.cfg to fix Galileo compatibility (thanks SirBriguy).
- Added Sun() function to get the Sun in a non-name specific way.  Assumes a single star.
- Change enum parse to be case insensitive.
- Change Vessel Identifier parsing to allow a wider range of characters.
- Fixed format text for funding message in mission control (thanks JPLRepo).
- Fixed issue with NextUnreachedBody() call caching results (thanks severedsolo).
