@@ -1,5 +1,6 @@
 Contract Configurator 1.23.1
 - Fixed issue with FacilityRequirement in tracking station (thanks JPLRepo).
+- Fixed issue where some requirement details weren't being saved in contracts.
 
 Contract Configurator 1.23.0
 - Support for KSP 1.3.0
